--- a/Tests/Runtime/com.facticus.dialogues.Tests.asmdef
+++ b/Tests/Runtime/com.facticus.dialogues.Tests.asmdef
@@ -1,7 +1,7 @@
 {
-  "name": "com.{{COMPANY}}.{{REPOSITORY_NAME}}.Tests",
+  "name": "com.facticus.dialogues.Tests",
   "references": [
-    "Unity.com.{{COMPANY}}.{{REPOSITORY_NAME}}"
+    "Unity.com.facticus.dialogues"
   ],
   "optionalUnityReferences": [
     "TestAssemblies"
