--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "com.{{COMPANY}}.{{REPOSITORY_NAME}}",
+  "name": "com.facticus.dialogues",
   "version": "0.1.0",
-  "displayName": "{{FRIENDLY_NAME}}",
-  "description": "{{DESCRIPTION}}",
-  "unity": "{{UNITY_VERSION}}",
+  "displayName": "Dialogues",
+  "description": "Dialogue system for Unity",
+  "unity": "2021.3",
   "unityRelease": "",
-  "dependencies": {},
+  "dependencies": {
+    "com.unity.graphtools.foundation": "0.11.2-preview"
+  },
   "keywords": [],
   "author": {
-    "name": "{{COMPANY_FRIENDLY_NAME}}",
-    "email": "{{REPORT_EMAIL}}",
-    "url": "{{COMPANY_WEBSITE}}"
+    "name": "Facticus",
+    "email": "",
+    "url": ""
   },
   "repository": {
     "type": "git",
-    "url": "{{GIT_REPOSITORY}}"
+    "url": "https://github.com/mnicolas94/facticus-dialogues.git"
   },
   "license": "MIT"
 }
