--- a/Runtime/com.facticus.dialogues.asmdef
+++ b/Runtime/com.facticus.dialogues.asmdef
@@ -2,6 +2,8 @@
     "name": "com.facticus.dialogues",
     "rootNamespace": "",
     "references": [
+        "GUID:4aacf4ad2c5335449beb48d6d9ec2f78",
+        "GUID:c35c6d9084ba1a541868fbd8c50a585a",
         "GUID:23eed6c2401dca1419d1ebd180e58c5a"
     ],
     "includePlatforms": [],
