--- a/Editor/com.facticus.dialogues.Editor.asmdef
+++ b/Editor/com.facticus.dialogues.Editor.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:cc000f534193819459fccdfdfd4c8298",
+        "GUID:c35c6d9084ba1a541868fbd8c50a585a",
         "GUID:87f0d0b9a8d159a4c94e89b339e4604a",
         "GUID:23eed6c2401dca1419d1ebd180e58c5a"
     ],
